objects/Participant_Enrollment_Status_History__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NewStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParticipantEnrollment__c</fullName>
        <label>Participant Enrollment</label>
        <referenceTo>Participant_Enrollment__c</referenceTo>
        <relationshipLabel>Participant Enrollment Status History</relationshipLabel>
        <relationshipName>Participant_Enrollment_Status_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Participant Enrollment Status History</label>
    <nameField>
        <displayFormat>PESH-{0000000}</displayFormat>
        <label>Participant Enrollment Status History Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Enrollment Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>